# III_Fyh

./: LICENSE  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py
homeworks/HW03/eda-cli/test_report/: report.md
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/: SOLUTION.md
homeworks/HW04/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: __init__.py  api.py  cli.py
homeworks/HW04/eda-cli/tests/: __init__.py  conftest.py
homeworks/HW05/: .gitignore  COMPLETION_SUMMARY.md  HW05.ipynb  QUICKSTART.md  README.md  REQUIREMENTS.md  STRUCTURE.txt  advanced_analysis.ipynb  config.json  data.csv  generate_sample_data.py  main.py  models.py  notebook.ipynb  prepare_data.py  utils.py
homeworks/HW06/: CHANGES.md  HW06.ipynb  README.md  SETUP.md  report.md
homeworks/HW07/: COMPLETION_STATUS.md  HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW07/artifacts/figures/: .gitkeep
homeworks/HW07/artifacts/labels/: labels_hw07_ds1.csv  labels_hw07_ds2.csv  labels_hw07_ds3.csv
homeworks/HW07/data/: S07-hw-dataset-01.csv  S07-hw-dataset-02.csv  S07-hw-dataset-03.csv
